# lunatic

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md
docs/: MISSING.md
include/lunatic/: coprocessor.hpp  cpu.hpp  integer.hpp  jit.hpp  memory.hpp
include/lunatic/detail/: meta.hpp  punning.hpp
src/: CMakeLists.txt  jit.cpp  placeholder.cpp
src/backend/: backend.hpp
src/backend/arm64/: backend.cpp  backend.hpp  common.hpp  compile_alu.cpp  compile_context.cpp  compile_coprocessor.cpp  compile_flags.cpp  compile_flush.cpp  compile_memory.cpp  compile_multiply.cpp  compile_shift.cpp  register_allocator.cpp  register_allocator.hpp
src/backend/x86_64/: allocator.cpp  allocator.hpp  backend.cpp  backend.hpp  common.hpp  compile_alu.cpp  compile_context.cpp  compile_coprocessor.cpp  compile_flags.cpp  compile_flush.cpp  compile_memory.cpp  compile_multiply.cpp  compile_shift.cpp  register_allocator.cpp  register_allocator.hpp  vtune.hpp
src/common/: aligned_memory.hpp  bit.hpp  compiler.hpp  meta.hpp  optional.hpp  pool_allocator.cpp  pool_allocator.hpp
src/frontend/: basic_block.cpp  basic_block.hpp  basic_block_cache.hpp  state.cpp  state.hpp
src/frontend/decode/: arm.hpp  thumb.hpp
src/frontend/decode/definition/: block_data_transfer.hpp  branch_exchange.hpp  branch_relative.hpp  common.hpp  coprocessor_register_transfer.hpp  count_leading_zeros.hpp  data_processing.hpp  exception.hpp  halfword_signed_transfer.hpp  multiply.hpp  multiply_long.hpp  saturating_add_sub.hpp  signed_halfword_multiply.hpp  single_data_swap.hpp  single_data_transfer.hpp  status_transfer.hpp  thumb_bl_suffix.hpp
src/frontend/ir/: emitter.cpp  emitter.hpp  opcode.hpp  register.hpp  value.hpp
src/frontend/ir_opt/: context_load_store_elision.cpp  context_load_store_elision.hpp  dead_code_elision.cpp  dead_code_elision.hpp  dead_flag_elision.cpp  dead_flag_elision.hpp  pass.hpp
src/frontend/translator/: translator.cpp  translator.hpp
src/frontend/translator/handle/: block_data_transfer.cpp  branch_exchange.cpp  branch_relative.cpp  coprocessor_register_transfer.cpp  count_leading_zeros.cpp  data_processing.cpp  exception.cpp  halfword_signed_transfer.cpp  multiply.cpp  multiply_long.cpp  saturating_add_sub.cpp  signed_halfword_multiply.cpp  single_data_swap.cpp  single_data_transfer.cpp  status_transfer.cpp  thumb_bl_suffix.cpp
test/: CMakeLists.txt  main.cpp
test/arm/: arm.cpp  arm.hpp  coprocessor.hpp  memory.hpp  state.hpp
test/arm/handlers/: handler16.inl  handler32.inl
test/arm/tablegen/: decoder.hpp  tablegen.cpp
test/arm/util/: likely.hpp  meta.hpp  punning.hpp
test/cmake/: FindSDL2.cmake
